// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should match a snapshot 1`] = `
<Memo(MenuComponent)
  defaultActiveKey="LOGO"
  location={
    Object {
      "hash": "mockHash",
      "key": "mockKey",
      "pathname": "mockPathname",
      "search": "",
      "state": Object {},
    }
  }
  menu={
    Array [
      Object {
        "icon": <ReapitLogo
          className="nav-item-icon"
        />,
        "key": "LOGO",
        "type": "LOGO",
      },
      Object {
        "callback": [Function],
        "icon": <FaCloud
          className="nav-item-icon"
        />,
        "key": "APPS",
        "title": "Apps",
        "type": "PRIMARY",
      },
      Object {
        "callback": [Function],
        "icon": <FaSignOutAlt
          className="nav-item-icon"
        />,
        "key": "LOGOUT",
        "title": "Logout",
        "type": "SECONDARY",
      },
    ]
  }
  mode="DESKTOP"
/>
`;

exports[`Menu should match a snapshot 2`] = `
<Memo(MenuComponent)
  defaultActiveKey="LOGO"
  location={
    Object {
      "hash": "mockHash",
      "key": "mockKey",
      "pathname": "mockPathname",
      "search": "",
      "state": Object {},
    }
  }
  menu={
    Array [
      Object {
        "icon": <ReapitLogo
          className="nav-item-icon"
        />,
        "key": "LOGO",
        "type": "LOGO",
      },
      Object {
        "callback": [Function],
        "icon": <FaCloud
          className="nav-item-icon"
        />,
        "key": "APPS",
        "title": "Apps",
        "type": "PRIMARY",
      },
      Object {
        "callback": [Function],
        "icon": <FaSignOutAlt
          className="nav-item-icon"
        />,
        "key": "LOGOUT",
        "title": "Logout",
        "type": "SECONDARY",
      },
    ]
  }
  mode="WEB"
/>
`;
